fix(richtext-lexical): insert paragraph at end button overlaps floating link toolbar (#10552)

--- a/packages/richtext-lexical/src/lexical/plugins/InsertParagraphAtEnd/index.scss
+++ b/packages/richtext-lexical/src/lexical/plugins/InsertParagraphAtEnd/index.scss
@@ -10,7 +10,7 @@
     height: 24px;
     margin-top: -16px;
     width: 100%;
-    z-index: 2;
+    z-index: 0;
     position: relative;
     padding: 4px 0px 2px 0px;
 
